WSGEN-1096: adjusting some spacing issues until we learn more

--- a/web/themes/custom/jcc_base/src/sass/layout/_block_views.scss
+++ b/web/themes/custom/jcc_base/src/sass/layout/_block_views.scss
@@ -20,11 +20,16 @@
     max-width: 84rem;
     margin-left: auto;
     margin-right: auto;
+    margin-bottom: 2rem;
 
     .layout__region {
       &--first {
         margin-top: 2rem;
         padding-right: 1rem;
+
+        .content {
+          padding-right: 2rem;
+        }
       }
       &--second {
         margin-top: 2rem;
